--- a/index.html
+++ b/index.html
@@ -1,103 +1,70 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css" />
+    <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
+    <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
+    <link rel="shortcut icon" href="assets/img/ceintures/Judo_red_belt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css"/>
     <link rel="stylesheet" href="assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <title>Judo Club de Fénétrange</title>
+    <title>Judo-Club Fénétrange</title>
 </head>
 
 <body>
+
     <header>
-        <h1 id="titre-page" class="encart-titre">
-            <img class="logo-titre" src="assets/img/accueil/banderole.jpg" alt="Judo Club Fénétrange">
-        </h1>
-        <nav id="naviguation-pages" class="nav">
-            <div class="nav-bar">
-                <a href="#Accueil" class="naviguation">Accueil</a>
-                <a href="#Activités-Tarifs" class="naviguation">Activités & Tarifs</a>
-                <a href="#Agenda" class="naviguation">Agenda</a>
-                <a href="#Events-à-venir" class="naviguation">Événements à venir</a>
-                <a href="#Pages-Des-Enfants" class="naviguation">Pages des enfants</a>
-                <a href="#Medias" class="naviguation">Médias</a>
-                <a href="#Contact" class="naviguation">Contact</a>
-            </div>
+        <div class="cadre-titre">
+            <h1 class="titre">JUDO CLUB DE FÉNÉTRANGE</h1>
+        </div>
+        <nav>
+            <a href="" class="naviguation page-active">Activités</a>
+            <a href="html/membres.html" class="naviguation">Équipes & Membres</a>
+            <a href="html/agenda.html" class="naviguation">Agenda</a>
+            <a href="html/actualites.html" class="naviguation">Actualités</a>
+            <a href="html/resultats.html" class="naviguation">Résultats</a>
+            <a href="html/reglements.html" class="naviguation">Réglements</a>
+            <a href="html/medias.html" class="naviguation">Médias</a>
+            <a href="html/contact.html" class="naviguation">Contact</a>
         </nav>
     </header>
-
     <main>
-        <section id="last-actu">
-            
-            <h2>Saison 2021 / 2022 : MATINEE D'INSCRIPTION LE SAMEDI 4 SEPTEMBRE de 9h à 12h pour toutes les
-                activités
-            </h2>
-
-            <article>
-                <h3>
-                    REPRISE DES ENTRAÎNEMENTS JUDO LE MARDI 7 SEPTEMBRE 2021.
-                </h3>
-                <ul> 
-                    <li>
-                        Le mardi et le vendredi : de 18h à 19h15 pour les enfants compétiteurs.
-                    </li>
-                    <li>
-                        Le mercredi de 17h à 18h pour les plus petits (nés en 2014, 2015, 2016).
-                    </li>
-                    <li>
-                        Le mardi et le vendredi de 19h30 à 21h pour les ados et les adultes.
-                    </li>
-                </ul>
-            </article>
-
-            <article>
-                <h3>REPRISE DU CROSS TRAINING LE JEUDI 9 SEPTEMBRE</h3>
-                <p>Tous les jeudis de 18h15 à 19h15 et de 19h15 à 20h15</p>
-            </article>
-
-            <article>
-                <h3>REPRISE DE L'ACTIVITE SENIORS LE LUNDI 6 SEPTEMBRE</h3>
-                <p>Tous les lundis de 17h30 à 18h30</p>
-            </article>
-
-            <article>
-                <h3>REPRISE DE L'ACTIVITE SENIORS LE LUNDI 6 SEPTEMBRE</h3>
-                <p>Tous les mercredis de 10h30 à 11h15</p>
-            </article>
-
-            <article>
-                <div class="message-important">
-                    Un protocole sanitaire correspondra aux normes sanitaires de la fédération.
-                    Il devra être appliqué par tous les licenciés. Il sera susceptible d'évoluer selon la situation au
-                    cours de la saison.
-                    IMPORTANT :
-                    Le pass sanitaire devra être présenté au moment de l'inscription pour tout licencié adulte
-                    Il sera exigé pour les mineurs de +12ans à partir du 30 septembre
-                    L'accès au dojo ne sera pas autorisé aux adultes non munis de leur pass sanitaire à jour.
-                    Le masque n'est pas obligatoire sur le lieu de pratique
-                </div>
-            </article>
-
-            <article>
-                <div id="mot-président">
-                    <h2>Mot du Président</h2>
-                    <p>Bonjour à tous.<br>
-                        La saison dernière a été à nouveau difficile et a mis nos nerfs de sportif à rude épreuve.<br>
-                        Malgré un début de saison prometteur, il afallu s'adapter aux contraintes sanitaires avant de tout refermer, laissant nos pratiquants privés de sport.<br>
-                        Le printemps a permis une reprise timide de nos activités en exterieur jusque debut mai où nous avons pu reprendre des entrainements et des activités en interieur, à la grande joie de tous. <br>
-                        Dans son plan de relance, la FFJDA a même proposé la licence gratuite pour 2020/2021 permettant à une dizaine de licenciés suplémentaires de rejoindre le Club (nouveaux licenciés et renouvellement de licences).<br>
-                        Les saisons se suivent et ne se ressemblent pas....en tout cas c'est mon souhait!<br>
-                        Les jeux Olympiques de Tokyo ont mis à jour la fantastique réussite de l'équipe de France de Judo, qui permettra surement à de nouvelles jeunes recrues de rejoindre les rangs de la grande famille du Judo.<br>
-                        L'ensemble du Comité se joint à moi pour souhaiter à tous une reprise sportive réussie et une belle saison.<br><br>
-                        Le président<br><br>
-                        Christian BOHN</p>
-                </div>
-            </article>
+        <section class="section-activite">
+            <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
+            <div class="activites">
+                <article class="enfants article">
+                    <a href="html/membres.html" class="lien-equipe">
+                        <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono" class="img-activite">
+                    </a>
+                    <div class="info-activite">
+                        <h3>Activité pour les tout-petits</h3>
+                        <p class="description-activite">
+                            Le  « baby judo » s’adresse aux enfants, dès 5 ans. Le cours dure entre 45 et 60 minutes. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
+                        </p>
+                        <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
+                        <span class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</span><br>
+                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                    </div>
+                </article>
+                <article class="adultes article">
+                    <a href="html/membres.html" class="lien-equipe">
+                        <img src="assets/img/media/groupe-judokas.jpg" alt="les judokas de Fénétrange" class="img-activite">
+                    </a>
+                    <div class="info-activite">
+                        <h3>Activité pour ado et adultes</h3>
+                        <p class="description-activite">
+                            Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination. Les experts en psychomotricité utilisent le judo comme thérapie afin d’augmenter les capacités motrice d’une personne. Pratiquer le judo est une bonne manière de canaliser l’énergie.
+                        </p>
+                        <p class="heure-activite">Les mardis et vendredi de 19h30 à 21h00</p>
+                        <span class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</span><br>
+                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
+    <script src="js/app.js"></script>
 </body>
-
 </html>
