mise en place page html

--- a/html/medias.html
+++ b/html/medias.html
@@ -94,7 +94,9 @@
                 <a class="media" href="../assets/img/media/ceintures-black.jpg">
                     <img data-index="19" src="../assets/img/media/ceintures-black.jpg">
                 </a>
-                <iframe width="990" height="557" src="https://www.youtube.com/embed/9R451906aao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="player-youtube media" href="https://www.youtube.com/embed/9R451906aao">
+                    <iframe width="350" height="350" src="https://www.youtube.com/embed/9R451906aao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </a>
             </div>
         </section>
 
