--- a/html/resultats.html
+++ b/html/resultats.html
@@ -21,7 +21,7 @@
         </div>
         <nav>
             <a href="../index.html" class="naviguation">Activités</a>
-            <a href="../html/membres.html" class="naviguation">Équipes & Membres</a>
+            <a href="../html/membres.html" class="naviguation">Membres</a>
             <a href="../html/agenda.html" class="naviguation">Agenda</a>
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="" class="naviguation page-active">Résultats</a>
