construction page membres

--- a/html/membres.html
+++ b/html/membres.html
@@ -31,9 +31,294 @@
         </nav>
     </header>
     <main>
-        <section class="section-activite">
-            <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
-
+        <section class="section-equipes">
+            <h2 class="titre-equipe">LES JUDOKAS</h2>
+            <div class="equipe">
+                <article id="andre-christophe" class="profil-equipe">
+                    <a href="#oberstinzel1" class="lien-equipe">
+                        <img src="../assets/img/judoka/joueur1.jpg" alt="joueur 1" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">ANTO Christophe</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">5/8ans</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Points tournois:</span>
+                            <span class="position-classe">89 points</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie :</span>
+                            <span class="position-categorie">-30kg / Poussin</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">Blanche-Jaune<img src="../assets/img/ceintures/Judo_white-yellow_belt.svg" alt="ceinture blanche-jaune" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="krieger-jean-luc" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/ChristianBohn.jpg" alt="joueur 6" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">BOHN Christian</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">P.Grade/Moselle</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie :</span>
+                            <span class="position-categorie">-70kg / Vétéran</span>
+                        </p>
+                        <p class="fonction">
+                            <span class="titre-fonction">Fonction :</span>
+                            <span class="club-fonction">Président</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">1er Dan<img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture noire 1er Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="jambert-loic" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/LaurenceCalais.jpg" alt="joueur 5" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">CALLAIS Laurence</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">P.Grade/Moselle</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+60kg / Vétéran</span>
+                        </p>
+                        <p class="fonction">
+                            <span class="titre-fonction">Fonction :</span>
+                            <span class="club-fonction">Trésorier</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">1er Dan<img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture noire 1er Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="cler-Lucas" class="profil-equipe">
+                    <a href="#oberstinzel1" class="lien-equipe">
+                        <img src="../assets/img/judoka/joueur2.jpg" alt="joueur 2" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">CLERIC Lothard</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">5/8ans</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Points tournois:</span>
+                            <span class="position-classe">130 points</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie :</span>
+                            <span class="position-categorie">+22kg / Mini-Poussin</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">Orange<img src="../assets/img/ceintures/Judo_orange_belt.svg" alt="ceinture orange" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="jambert-loic" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/DamienDiedat.jpg" alt="joueur 5" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">DIEDAT Damien</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">C.France Vétéran</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+70kg / Vétéran</span>
+                        </p>
+                        <p class="fonction">
+                            <span class="titre-fonction">Fonction :</span>
+                            <span class="club-fonction">Entraineur</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">4ème Dan<img src="../assets/img/ceintures/Black_belt_4th_dan.svg" alt="ceinture noire 4ème Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="jambert-loic" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/ValentinDiedat.jpg" alt="joueur 5" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">DIEDAT Valentin</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">Coupe G.Est/France</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+60kg / Senior</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">2ème Dan<img src="../assets/img/ceintures/Black_belt_2nd_dan.svg" alt="ceinture noire 2ème Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="dietrich-corentin" class="profil-equipe">
+                    <a href="#oberstinzel1" class="lien-equipe">
+                        <img src="../assets/img/judoka/joueur3.jpg" alt="joueur 3" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">DIERICH Clodoric</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">5/8ans</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Points tournois:</span>
+                            <span class="position-classe">76 points</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+25kg / Mini-Poussin</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">Blanche<img src="../assets/img/ceintures/Judo_white_belt.svg" alt="ceinture blanche" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="henry-jean-luc" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/joueur4.jpg" alt="joueur 4" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">HENRIETTE Jean-Marie</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">9/12ans</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Points tournois:</span>
+                            <span class="position-classe">83 points</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+55kg / Benjamin</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">Orange-Verte<img src="../assets/img/ceintures/Judo_orange-green_belt.svg" alt="ceinture orange-verte" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="jambert-loic" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/JackyKremer.jpg" alt="joueur 5" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">KREMER Jacky</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">P.Grade</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+80kg / Vétéran</span>
+                        </p>
+                        <p class="fonction">
+                            <span class="titre-fonction">Fonction :</span>
+                            <span class="club-fonction">Assesseur</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">1er Dan<img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture noire 1er Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="jambert-loic" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/PascalScheaffer.jpg" alt="joueur 5" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">SCHEAFFER Pascal</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">Ados/Adultes</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Compétitions:</span>
+                            <span class="position-classe">P.Grade</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+80kg / Vétéran</span>
+                        </p>
+                        <p class="fonction">
+                            <span class="titre-fonction">Fonction :</span>
+                            <span class="club-fonction">Vice-Président</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">1er Dan<img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture noire 1er Dan" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+                <article id="wehrung-xavier" class="profil-equipe">
+                    <a href="#oberstinzel2" class="lien-equipe">
+                        <img src="../assets/img/judoka/joueur7.jpg" alt="joueur 7" class="img-joueur">
+                    </a>
+                    <div class="info-joueur">
+                        <h3 class="nom-joueur">WECK Ralph</h3>
+                        <p class="groupe">
+                            <span class="titre-groupe">Groupe:</span>
+                            <span class="nom-groupe">9/12ans</span>
+                        </p>
+                        <p class="classement">
+                            <span class="titre-classe">Points tournois:</span>
+                            <span class="position-classe">75 points</span>
+                        </p>
+                        <p class="categorie">
+                            <span class="titre-categorie">Catégorie:</span>
+                            <span class="position-categorie">+35kg / Poussin</span>
+                        </p>
+                        <p class="rang">
+                            <span class="titre-rang">Grade:</span>
+                            <span class="position-rang">Jaune-Orange<img src="../assets/img/ceintures/Judo_yellow-orange_belt.svg" alt="ceinture jaune-orange" class="rang-img"></span>
+                        </p>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
     <script src="../js/membres.js"></script>
