construction reglement htlm

--- a/html/reglements.html
+++ b/html/reglements.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
-    <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_belt.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/reglements.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -31,9 +31,34 @@
         </nav>
     </header>
     <main>
-        <section class="section-activite">
-            <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
-
+        <section class="section-reglement">
+            <h2 class="titre-media">LE RÉGLEMENT</h2>
+            <div id="liste" class="liste">
+                <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
+                    <span class="telecharger">Télécharger le Code Sportif</span> 
+                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                </a>
+                <a class="reglement" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">
+                    <span class="telecharger">Télécharger les Textes Officiels</span> 
+                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                </a>
+                <a class="reglement" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">
+                    <span class="telecharger">Télécharger le guide d'enseignement et formation</span> 
+                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                </a>
+                <a class="reglement" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">
+                    <span class="telecharger">Télécharger le document de licence et contrat</span> 
+                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                </a>
+                <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">
+                    <span class="telecharger">Télécharger le réglement d'arbitrage International</span> 
+                    <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
+                </a>
+                <a class="reglement" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">
+                    <span class="telecharger">Télécharger le réglement d'arbitrage National</span> 
+                    <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
+                </a>
+            </div>
         </section>
     </main>
     <script src="../js/reglements.js"></script>
