construction reglement htlm

--- a/html/reglements.html
+++ b/html/reglements.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="section-reglement">
-            <h2 class="titre-media">LE RÉGLEMENT</h2>
+            <h2 class="titre-media">LES RÉGLEMENTS</h2>
             <div id="liste" class="liste">
                 <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
                     <span class="telecharger">Télécharger le Code Sportif</span> 
