--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/style.css"/>
     <link rel="stylesheet" href="assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Judo-Club Fénétrange</title>
 </head>
 
@@ -17,7 +18,9 @@
 
     <header>
         <div class="cadre-titre">
-            <h1 class="titre">JUDO CLUB DE FÉNÉTRANGE</h1>
+            <img src="assets/img/accueil/icon.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
+            <h1 class="titre">JUDO CLUB<br> DE<br> FÉNÉTRANGE</h1>
+            <img src="assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
         <nav>
             <a href="" class="naviguation page-active">Activités</a>
